# rospkg

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  constraints.txt  dput.cf  manifest.xml  package.xml  setup.cfg  setup.py  stack.yaml  stdeb.cfg  stdeb2.cfg  stdeb3.cfg
.github/workflows/: ci.yaml
doc/: Makefile  command_line.rst  conf.py  contents.rst  developers_guide.rst  distro.rst  distro_format.rst  environment.rst  file_formats.rst  index.rst  manifest_xml.rst  manifests.rst  os_detect.rst  overview.rst  packages.rst  python_api.rst  rospack.rst  rospkg_distro.rst  rospkg_environment.rst  rospkg_packages.rst  rospkg_stacks.rst  rosstack.rst  stack_manifests.rst  stack_xml.rst  stacks.rst  sw_license_introspection.rst  tutorials.rst
doc/_templates/: index.html
doc/man/: rosversion.1  rosversion.rst
scripts/: rosversion  sw_licenses
src/rospkg/: __init__.py  common.py  distro.py  environment.py  geany_run_script.sh  manifest.py  os_detect.py  rospack.py  rosstack.py  rosversion.py  stack.py  stacks.py  sw_license.py
src/rospkg/rosdistro/: __init__.py  distro.py  raw_format.py  rosinstall_convert.py  vcs_config.py
test/: setup.cfg  test_rospkg_catkin_packages.py  test_rospkg_common.py  test_rospkg_distro.py  test_rospkg_distro_vcs_config.py  test_rospkg_environment.py  test_rospkg_manifest.py  test_rospkg_os_detect.py  test_rospkg_packages.py  test_rospkg_stacks.py  test_rospkg_sw_licenses.py
test/catkin_package_tests/p1/baa/: licenses_baa-0.1.2.yml  package.xml
test/catkin_package_tests/p1/bar/: package.xml
test/catkin_package_tests/p1/foo/: package.xml
test/fakeetcros/: distro
test/manifest/catkin/: manifest.xml
test/manifest/example1/: manifest.xml
test/os_detect/centos/: redhat-release-8.2
test/os_detect/fedora/: issue  redhat-release
test/os_detect/gentoo/: gentoo-release
test/os_detect/opensuse/: SuSE-brand  SuSE-release
test/os_detect/opensuse13/: SUSE-brand  SuSE-release
test/os_detect/osx/: sw_vers  sw_vers_bad
test/os_detect/rhel/: issue  redhat-release-ootpa  redhat-release-pensacola
test/os_detect/slackware/: slackware-version
test/os_detect/ubuntu/: lsb_release
test/package_tests/: rospack_cache
test/package_tests/p1/bar/: manifest.xml
test/package_tests/p1/foo/: manifest.xml
test/package_tests/p2/baz/: manifest.xml
test/rosdistro/: bad2.rosdistro  bad3.rosdistro  bad4.rosdistro  bad5.rosdistro  bad6.rosdistro  bad7.rosdistro  bad8.rosdistro  bad9.rosdistro  diamondback.rosdistro  empty_variants.rosdistro  no_variants.rosdistro  roscore-bad.xml  simple.rosdistro
test/stack_tests/s1/bar/: stack.xml
test/stack_tests/s1/foo/: stack.xml
test/stack_tests/s2/baz/: stack.xml  (+1 more)
test/unary_tests/unary/: manifest.xml  stack.xml
(+3 files in other folders)
