<?xml version="1.0"?>
<package>
  <name>rospkg</name>
  <version>1.0.39</version>
  <description>
    Standalone Python library for the ROS package system.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rospkg</url>
  <author>Ken Conley</author>
  <buildtool_depend version_gte="0.5.74">catkin</buildtool_depend>
  <run_depend>catkin</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
