<package>
  <name>baa</name>
  <version>0.1.2</version>
  <description>
    I AM THE VERY MODEL OF A MODERN MINOR GENERAL
  </description>
  <maintainer email="someone@example.com">Someone</maintainer>

  <license>Apache2</license>
  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/my_package</url>
  <url type="bugtracker">http://www.github.com/my_org/my_package/issues</url>
  <author email="jane.doe@example.com">Jane Doe</author>

  <build_depend>cmake</build_depend>
  <build_depend>pkg-config</build_depend>
  <test_depend>gtest</test_depend>

  <export />
</package>
