<package>
  <name>foo</name>
  <version>1.2.3</version>
  <description>
    I AM THE VERY MODEL OF A MODERN MAJOR GENERAL
  </description>
  <maintainer email="someone@example.com">Someone</maintainer>

  <license>BSD</license>
  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/my_package</url>
  <url type="bugtracker">http://www.github.com/my_org/my_package/issues</url>
  <author>John Doe</author>
  <author email="jane.doe@example.com">Jane Doe</author>

  <build_depend>catkin</build_depend>
  <build_depend version_gte="1.1" version_lt="2.0">genmsg</build_depend>

  <build_depend>libboost-thread-dev</build_depend>
  <run_depend>libboost-thread</run_depend>

  <test_depend>gtest</test_depend>

  <conflict>my_old_package</conflict>

  <export>
  </export>
</package>
